--- a/CzSoft/appsettings.json
+++ b/CzSoft/appsettings.json
@@ -5,5 +5,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Message" :  "Hello from appsettings"
+  "Message": "Hello from appsettings",
+  "ConnectionStrings": {
+    "CzSoftDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CzSoft;Integrated Security=True"
+  }
 }
